--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,25 @@
 	        <scope>provided</scope>
 	    </dependency>
     
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-autoconfigure</artifactId>
+    <version>1.5.2.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>commons-dbcp</groupId>
+    <artifactId>commons-dbcp</artifactId>
+    <version>1.4</version>
+</dependency>
+
+<dependency>
+ <groupId>com.oracle</groupId>
+ <artifactId>ojdbc6</artifactId>
+ <version>11.1.0.7.0</version>
+</dependency>
+
+    
 	</dependencies>
 	<build>
 		<finalName>reconciler</finalName>
